fixed alignment of books and added animations

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('reset.css');
 @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Emoji:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Wittgenstein:ital,wght@0,400..900;1,400..900&display=swap');
 
 .material-symbols-outlined {
 
@@ -35,18 +35,29 @@ h1{
     font-size: 60px;
 }
 .books{
-    background-image: url('OIU5X50.jpg'); /* URL of your tile image */
+    background-image: url('OIU5X50.jpg');
     background-repeat: repeat; /* Repeat both horizontally and vertically */
     background-position: 20px 25px; 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 16px; /* Space between the books */
+    gap: 16px; 
     padding: 30px;
+    
 }
-
+@keyframes spawn-in {
+  from {
+      transform: scale(1.2);
+      opacity: 0;
+  }
+  to {
+      transform: scale(1);
+      opacity: 1;
+  }
+}
 .book {
-    background-color: rgb(255, 255, 255, 0.9); /* Example background color */
-    padding: 16px; /* Example padding */
+    animation: spawn-in 500ms;
+    background-color: rgb(255, 255, 255, 0.9); 
+    padding: 16px;
     height: 400px; 
     width: 300px;
     border: 6px solid #6c3a19;
@@ -55,7 +66,25 @@ h1{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1.5fr 1fr 1fr 1fr;
+    font-family: "Baskervville SC";
+    transition: 200ms;
+    box-sizing: border-box;
+    justify-self: center; /* Center the book horizontally */
+    align-self: start; /* Align the book to the top */
     
+}
+.book:not(:first-child):hover {
+  transform: translateY(-10px);
+}
+.add-new{
+  cursor: pointer;
+}
+.add-new:hover {
+  transform: scale(98%);
+  background: #6c3a19;
+}
+.add-new:hover .material-symbols-outlined {
+  color: white;
 }
 p{
   color: #6c3a19;
@@ -71,7 +100,7 @@ p{
   grid-column: 1 / 3;
   align-self:flex-start;
   justify-self: center;
-  font-size: 20px;;
+  font-size: 25px;;
 }
 .rating{
   grid-column: 1 / 3;
@@ -83,6 +112,9 @@ p{
 }
 .pages, .read{
   align-self: flex-end;
+  font-size: 20px;
+  font-family: "Wittgenstein";
+
 }
 
 .read {
@@ -94,10 +126,11 @@ p{
 }
 
 .material-symbols-outlined {
-    font-size: 50px !important; 
+    font-size: 70px !important; 
     color: #6c3a19;
     align-self: center;
     justify-self: center;
     grid-area: 1 / 1/ 4/ 3;
+    transform: translateY(30px);
 }
 
